oml, fixes